--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -11,6 +11,7 @@
                 "ms-python.python",
                 "github.vscode-pull-request-github",
                 "ryanluker.vscode-coverage-gutters",
+                "esbenp.prettier-vscode",
                 "ms-python.vscode-pylance"
             ],
             "settings": {
