--- a/custom_components/screenlogic_debug/manifest.json
+++ b/custom_components/screenlogic_debug/manifest.json
@@ -17,6 +17,6 @@
   "iot_class": "local_push",
   "issue_tracker": "https://github.com/dieselrabbit/screenlogic-debug/issues",
   "loggers": ["screenlogicpy"],
-  "requirements": ["git+https://github.com/dieselrabbit/screenlogicpy.git@dev#screenlogicpy==0.8.0"],
+  "requirements": ["screenlogicpy==0.7.1"],
   "version": "0.2.0"
 }
